part1/exercise09/pingpong-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong 
  template:
    metadata:
      labels:
        app: pingpong 
    spec:
      containers:
        - name: pingpong 
          image: mashiahoz/pingpong:latest
