part1/exercise09/pingpong-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong 
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 5000
